# rexglue-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: rexglueConfig.cmake.in  rexglue_install.cmake
include/rex/: cvar.h
include/rex/codegen/: config.h
include/rex/graphics/d3d12/: render_target_cache.h
include/rex/graphics/vulkan/: render_target_cache.h
include/rex/kernel/: format.h  kernel_state.h
include/rex/memory/: ring_buffer.h
include/rex/runtime/guest/: context.h  memory.h
include/rex/ui/: window.h  window_listener.h
src/audio/: xma_context.cpp
src/codegen/: CMakeLists.txt  builders.h  instruction_dispatch.cpp  recompile.cpp
src/codegen/builders/: control_flow.cpp  helpers.h  system.cpp  vector.cpp
src/core/: CMakeLists.txt  cvar.cpp  filesystem_posix.cpp  filesystem_win.cpp  mapped_memory_posix.cpp  memory_posix.cpp
src/graphics/: CMakeLists.txt
src/kernel/xam/: xam_input.cpp
src/kernel/xboxkrnl/: xboxkrnl_error.cpp  xboxkrnl_io.cpp  xboxkrnl_memory.cpp  xboxkrnl_strings.cpp
src/rexglue/: CMakeLists.txt  cli_utils.h  main.cpp
src/rexglue/commands/: codegen_command.cpp  init_command.cpp
src/ui/: CMakeLists.txt  windowed_app_main_posix.cpp  windowed_app_main_win.cpp
